# unifiProtectWebhookReceiver

./: main.py  pyproject.toml  testdataobfuscator.py
.github/workflows/: publish.yml
model/: unifialarm.py  unifialarmcionditionlistitem.py  unifialarmcondition.py  unifialarmsource.py  unifialarmtrigger.py  unifialert.py
testdata/: testdataobfuscator.py
testdata/200/: admin_access.json  animal.json  audio_alarm_bark.json  audio_alarm_glass_break.json  audio_alarm_siren.json  audio_alarm_speak.json  device_adoption_state_changed.json  device_issue.json  face_known.json  license_plate_known.json  motion.json  object.json  person.json  person_idle_time.json  schedule.json  smart_tamper_detection.json  system.json  vehicle_idle_time.json
tests/: webhooks.py
