[project]
name = "unifiprotectwebhookreceiver"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "pillow>=12.0.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.setuptools]
packages = ["model"]
py-modules = ["main"]
